--- a/package.json
+++ b/package.json
@@ -4,12 +4,17 @@
   "private": true,
   "dependencies": {
     "@nivo/line": "^0.83.0",
+    "@nivo/tooltip": "^0.83.0",
     "@reduxjs/toolkit": "^1.9.5",
+    "@syncfusion/ej2-base": "^22.2.5",
+    "@syncfusion/ej2-react-popups": "^22.2.7",
     "@testing-library/jest-dom": "^5.17.0",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
     "axios": "^1.4.0",
     "chart.js": "^4.3.2",
+    "install": "^0.13.0",
+    "npm": "^9.8.1",
     "react": "^18.2.0",
     "react-chartjs-2": "^5.2.0",
     "react-dom": "^18.2.0",
